# cynth-v1

./: .gitignore  CMakeLists.txt  README.md  build-ccn.bat  build-mingw.bat  build.bat  cynth.cmake  devenv.bat  export.bat  gen-ccn.bat  gen-mingw.bat  gen.bat  run-cli.bat  run.bat  test.cpp  thirdparty.cmake
doc/: CLI_notes.md  Cynth_notes.md  WASAPI_notes.md  full_doc.cz.md  style.md
doc/res/: md.css
inc/: WASAPI.hpp  cynth.hpp  functions.hpp  logger.hpp  oscillators.hpp  platform.hpp  setup.hpp  tools.hpp
inc/api/: device.hpp  setup.hpp  wasapi.hpp
inc/api/wasapi/: audio_client.hpp  control.hpp  device.hpp  device_collection.hpp  device_enumerator.hpp  interface.hpp  property_store.hpp  render_client.hpp  setup.hpp
inc/cli/: script.hpp
inc/pcm/: buffer.hpp  sample.hpp  types.hpp
inc/pcm/functions/: conversion_function.hpp  conversion_functions.hpp  sequence_function.hpp  time_function.hpp  wave_function.hpp  wave_functions.hpp
inc/rack/: devices.hpp  oscillators.hpp
inc/rack/components/: receiver_port.hpp  transmitter_port.hpp
inc/rack/devices/: input_device.hpp  midi_device.hpp  oscillator.hpp  output_device.hpp  sound_card.hpp
inc/user_library/: types.hpp
inc/user_library/devices/: envelope.hpp  hub.hpp  lfo.hpp  sequencer.hpp  sound_card.hpp  tone_generator.hpp  types.hpp
inc/user_library/functions/: sequence_element.hpp  sequence_function.hpp  types.hpp  wave_function.hpp  wave_functions.hpp
src/: WASAPI.cpp  config.cpp  devices.cpp  entry.cpp  entry2.cpp  functions.cpp  logger.cpp  oscillators.cpp  pybind11_module.cpp  setup.cpp  tools.cpp
src/api/wasapi/: audio_client.cpp  control.cpp  device.cpp  device_collection.cpp  device_enumerator.cpp  interface.cpp  property_store.cpp  render_client.cpp  setup.cpp
src/pcm/: buffer.cpp  sample.cpp
src/pcm/functions/: conversion_function.cpp  conversion_functions.cpp  sequence_function.cpp  time_function.cpp  wave_function.cpp  wave_functions.cpp
src/rack/components/: receiver_port.cpp  transmitter_port.cpp
src/rack/devices/: input_device.cpp  midi_device.cpp  oscillator.cpp  output_device.cpp  sound_card.cpp
src/user_library/: types.cpp
src/user_library/devices/: envelope.cpp  hub.cpp  lfo.cpp  sequencer.cpp  sound_card.cpp  tone_generator.cpp
src/user_library/functions/: sequence_element.cpp  sequence_function.cpp  wave_function.cpp  wave_functions.cpp
test/: Cynth.cp37-win_amd64.pyd  dll_test.cpp  py_test.py
test/dll/: entry.cpp  export_test.cpp  export_test.hpp  import_test.cpp
todo/: cli.cpp  config.hpp
todo/cli/: cli.hpp
